--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,20 @@
 		"--inlay-hints=true",
 		"--pretty",
 	],
+	"C_Cpp.default.intelliSenseMode": "gcc-arm",
+	"C_Cpp.intelliSenseEngine": "default",
+	"C_Cpp.intelliSenseEngineFallback": "disabled",
+	"C_Cpp.clang_format_path": "clang-format-18",
+	"C_Cpp.clang_format_fallbackStyle": "Visual Studio",
+	"C_Cpp.autocomplete": "default",
+	"C_Cpp.codeFolding": "enabled",
+	"C_Cpp.enhancedColorization": "enabled",
+	"C_Cpp.autocompleteAddParentheses": true,
+	"C_Cpp.loggingLevel": "Information",
+	"C_Cpp.autoAddFileAssociations": true,
+	"C_Cpp.codeAnalysis.clangTidy.enabled": false,
+	"C_Cpp.codeAnalysis.clangTidy.path": "/usr/bin/clang-tidy-18",
+	"C_Cpp.codeAnalysis.runAutomatically": true,
 	"editor.semanticHighlighting.enabled": true,
 	"editor.renderLineHighlight": "all",
 	"editor.renderWhitespace": "boundary",
@@ -193,6 +207,10 @@
 		"cmath": "c",
 		"random": "c",
 		"foc.h": "c",
-		"log.h": "c"
+		"log.h": "c",
+		"ratio": "cpp",
+		"system_error": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp"
 	},
 }
