--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -211,6 +211,13 @@
 		"ratio": "cpp",
 		"system_error": "cpp",
 		"type_traits": "cpp",
-		"utility": "cpp"
+		"utility": "cpp",
+		"fstream": "cpp",
+		"iosfwd": "cpp",
+		"istream": "cpp",
+		"limits": "cpp",
+		"sstream": "cpp",
+		"stop_token": "cpp",
+		"streambuf": "cpp"
 	},
 }
